# codex

./: .bazelignore  .bazelrc  .codespellignore  .codespellrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  PNPM.md  README.md  SECURITY.md  announcement_tip.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl  workspace_root_test_launcher.bat.tpl
.github/workflows/: Dockerfile.bazel  bazel.yml  blob-size-policy.yml  cargo-deny.yml  ci.bazelrc  ci.yml  cla.yml  close-stale-contributor-prs.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  shell-tool-mcp-ci.yml  shell-tool-mcp.yml  v8-canary.yml  v8-ci.bazelrc
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: analytics_client.rs  analytics_client_tests.rs  lib.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
codex-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs  schema_fixtures.rs
codex-rs/app-server-protocol/tests/: schema_fixtures.rs
codex-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  dynamic_tools.rs  error_code.rs  external_agent_config_api.rs  filters.rs  fs_api.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  thread_state.rs  thread_status.rs  transport.rs
codex-rs/artifact-presentation/: BUILD.bazel  Cargo.toml
codex-rs/artifact-presentation/src/: lib.rs  presentation_artifact.rs  tests.rs
codex-rs/artifact-spreadsheet/: BUILD.bazel  Cargo.toml
codex-rs/artifact-spreadsheet/src/: address.rs  chart.rs  conditional.rs  error.rs  formula.rs  lib.rs  manager.rs  model.rs  pivot.rs  render.rs  style.rs  table.rs  tests.rs  xlsx.rs
codex-rs/artifacts/: BUILD.bazel  Cargo.toml  README.md
codex-rs/artifacts/src/: client.rs  lib.rs  runtime.rs  tests.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
codex-rs/cloud-tasks/src/: app.rs  cli.rs  lib.rs  ui.rs  util.rs
codex-rs/cloud-tasks/tests/: env_filter.rs
codex-rs/codex-api/: Cargo.toml  README.md
codex-rs/codex-api/src/: auth.rs  common.rs  error.rs  lib.rs  provider.rs  rate_limits.rs  telemetry.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs  sse_end_to_end.rs
codex-rs/codex-client/: BUILD.bazel  Cargo.toml
codex-rs/codex-client/src/: default_client.rs  lib.rs  request.rs  transport.rs
codex-rs/common/: BUILD.bazel  Cargo.toml
codex-rs/common/src/: approval_presets.rs  config_override.rs  config_summary.rs  lib.rs  oss.rs  sandbox_mode_cli_arg.rs
codex-rs/config/: Cargo.toml
codex-rs/config/src/: cloud_requirements.rs  config_requirements.rs  constraint.rs  diagnostics.rs  lib.rs  requirements_exec_policy.rs  state.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  README.md  build.rs  config.schema.json  dfa_unless_trusted_5_1.txt  gpt_5_2_prompt.md  models.json  prompt_with_apply_patch_instructions.md
codex-rs/core/src/: acp.rs  analytics_client.rs  analytics_client_tests.rs  api_bridge.rs  api_bridge_tests.rs  apply_patch.rs  apply_patch_tests.rs  arc_monitor.rs  arc_monitor_tests.rs  auth.rs  auth_env_telemetry.rs  auth_tests.rs  bash.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  codex.rs  codex_conversation.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_tests.rs  codex_tests_guardian.rs  codex_thread.rs  command_canonicalization.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  config.rs  config_types.rs  connectors.rs  connectors_tests.rs  contextual_user_message.rs  contextual_user_message_tests.rs  conversation_manager.rs  custom_prompts.rs  custom_prompts_tests.rs  default_client.rs  (+124 more)
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
codex-rs/environment/: BUILD.bazel  Cargo.toml
codex-rs/environment/src/: fs.rs  lib.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/exec-server/src/: client.rs  client_api.rs  connection.rs  environment.rs  file_system.rs  lib.rs  local.rs  local_file_system.rs  local_process.rs  posix.rs  process.rs  protocol.rs  remote_file_system.rs  remote_process.rs  rpc.rs  server.rs  unix.rs
codex-rs/exec-server/tests/: exec_process.rs  file_system.rs  initialize.rs  process.rs  stdio_smoke.rs  websocket.rs  websocket_smoke.rs
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: feedback_diagnostics.rs  lib.rs
codex-rs/hooks/: BUILD.bazel  Cargo.toml
codex-rs/hooks/src/: legacy_notify.rs  lib.rs  registry.rs  schema.rs  types.rs  user_notification.rs
codex-rs/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md  build.rs
codex-rs/linux-sandbox/src/: bwrap.rs  landlock.rs  launcher.rs  lib.rs  linux_run_main.rs  linux_run_main_tests.rs  mounts.rs  proxy_routing.rs  vendored_bwrap.rs
codex-rs/login/: BUILD.bazel  Cargo.toml
codex-rs/login/src/: custom_ca.rs  device_code_auth.rs  lib.rs  probe_support.rs  server.rs  token_data.rs  token_data_tests.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-types/: BUILD.bazel  Cargo.toml  generate_mcp_types.py
codex-rs/network-proxy/: Cargo.toml  README.md
codex-rs/network-proxy-cli/: Cargo.toml
(+2286 files in other folders)
